# dvara

./: .env.example  .gitignore  README.md  benchmark_results.md  docker-compose.yml  pyproject.toml  requirements.txt  seed_confirmed_urls.py
docker/: Dockerfile  init.sql
dvara/: app.py  benchmarks.py  bloom.py  cli.py  config.py  ingestion.py
dvara/scripts/: seed_db.py
dvara/static/: index.html
frontend/: screen1.html  screen2.html
tests/: test_bloom.py
