[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dvara"
version = "0.1.3"
description = "High-speed malicious URL detection using a Bloom Filter"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Dhruv", email = "dhruvh3vedi@gmail.com" }
]
keywords = ["security", "bloom-filter", "url", "malware", "phishing", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "mmh3>=5.2.1",
    "bitarray>=3.8.1",
    "requests>=2.32.3",
    "click>=8.1.7",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.6",
    "redis>=5.0.8",
    "asyncpg>=0.29.0",
    "apscheduler>=3.10.4",
    "pydantic>=2.9.2",
]
dev = [
    "pytest>=9.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
dvara = "dvara.cli:cli"

[project.urls]
Homepage = "https://github.com/dhruvh-0512/dvara"
Repository = "https://github.com/dhruvh-0512/dvara"
Issues = "https://github.com/dhruvh-0512/dvara/issues"

[tool.hatch.build.targets.wheel]
packages = ["dvara"]

[tool.hatch.build.targets.wheel.shared-data]
"dvara/data" = "dvara/data"